Criterios de aceptacion y arquitectura hexagonal